fix superheader wrapping
git-svn-id: https://irt-svn.stanford.edu/repos/irt/lane/laneweb/trunk@59919 c440208b-5602-0410-a095-92527a996296

--- a/src/main/webapp/resources/css/irt3/layout.css
+++ b/src/main/webapp/resources/css/irt3/layout.css
@@ -1,5 +1,5 @@
 /* from yui-grid tool: */
-#custom-doc { 
+#custom-doc, #shd { 
 width:76.92em;*width:75.07em;min-width:1000px; margin:auto; text-align:left;
 }
 #shd {
